fix overflow bug on the page

--- a/css/css_stylesheet.css
+++ b/css/css_stylesheet.css
@@ -2,6 +2,10 @@
     outline: 1px solid red;
 }*/
 
+.container-fluid {
+  overflow: hidden;
+}
+
 #allcontent {
   background-color:#F5F5F5;
   border-radius: 1%;
